# Zappy

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PSU_2016_zappy.cbp  cmake_install.cmake  source.mk  zappy_server
graphic/Linux/Zappy_Graph_linux_Data/: globalgamemanagers  globalgamemanagers.assets  level0  level1  resources.assets  sharedassets0.assets  sharedassets0.assets.resS  sharedassets1.assets  sharedassets1.assets.resS
graphic/Linux/Zappy_Graph_linux_Data/Resources/: unity_builtin_extra
graphic/Windows/Zappy_Graph_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  level1  resources.assets  sharedassets0.assets  sharedassets1.assets
graphic/zappyGraphic/ZappyGraph/: Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  ZappyBaudet.CSharp.Plugins.csproj  ZappyBaudet.CSharp.csproj  ZappyBaudet.sln  ZappyTest.sln  ZappyTest.userprefs
graphic/zappyGraphic/ZappyGraph/Assets/: Cube.prefab  HUDInventory.cs  PlayerController.controller  SpawnMap.cs  Woodplank.fbx  getIp.cs  inventoryMurloc.cs  menu.unity  oui.unity  serv.unity  tesst.unity  test_inv.unity
graphic/zappyGraphic/ZappyGraph/Assets/Materials/: 7mu_murloc_map1.mat  7mu_murloc_map2.mat  7mu_murloc_map4.mat  7mu_murloc_map5.mat  7mu_murloc_map6.mat  7mu_murloc_map8.mat  7vs_brightroadrock.mat  frostwinddesert_glow01.mat  frostwinddesert_planet_atmosphere01_day.mat  nexusraid_starsa.mat  veb_rocks02.mat
graphic/zappyGraphic/ZappyGraph/Assets/Resources/: HUDError.prefab  Main.prefab  network.prefab  parsing.prefab
graphic/zappyGraphic/ZappyGraph/Assets/TestStructureDATA/: Player 1.prefab  Player 2.prefab  Player.prefab  WoodBlock 1.prefab
graphic/zappyGraphic/ZappyGraph/Assets/TestStructureDATA/Jewel/: Deraumere.fbx  Linemate.fbx  Mendiane.fbx  MurlocController.controller  Nourriture.fbx  Phiras.fbx  Sibur.fbx  Thystame.fbx
graphic/zappyGraphic/ZappyGraph/Assets/TestStructureDATA/Jewel/Materials/: 7dl_dalaran_crystal01_purple.mat  arconitedif.mat  arconitedif_blue.mat  caustic_medfreq.mat  murloc2_murk.mat  ungorocrystalblue.mat  ungorocrystalgreen.mat  ungorocrystalred.mat  ungorocrystalyellow.mat
graphic/zappyGraphic/ZappyGraph/Assets/TestStructureDATA/Materials/: murloc2_green.mat
graphic/zappyGraphic/ZappyGraph/Assets/TestStructureDATA/Script/: ButtonScript.cs  CameraScript.cs  GenScript.cs  MainCube.cs  MainScript2.cs  MouseScript.cs  MusicScript.cs  NetworkScript.cs  ParsingScript.cs  blockScript.cs  getIntel.cs  inventory.cs  myMap.cs  playerInventory.cs  playerScript.cs
graphic/zappyGraphic/ZappyGraph/Assets/WoodTower3.fbm/Materials/: 7mu_murloc_map1.mat
graphic/zappyGraphic/ZappyGraph/Assets/serv/: LightingData.asset  ReflectionProbe-0.exr
graphic/zappyGraphic/ZappyGraph/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
inc/: funcs.h  functions.h  inventory.h  list.h  map.h  player.h  stuff.h
inc/ai/: EventHandler.hpp  Socket.hpp  Utils.hpp  zappy.hpp
inc/server/: client.h  command.h  communication.h  funcs.h  incantation.h  info.h  list.h  look.h  map.h  player.h  server.h  socket.h  string.h  stuff.h  team.h
src/ai/: EventHandler.cpp  EventHandler.hpp  Makefile  Socket.cpp  Utils.cpp  ZappException.cpp  main.cpp  zappy.cpp  zappy_ai  zappy_client  zappy_ia
src/ai/include/: EventHandler.hpp  Socket.hpp  Utils.hpp  ZappException.hpp  zappy.hpp
src/ai/src/: EventHandler.cpp  Socket.cpp  Utils.cpp  ZappException.cpp  main.cpp
src/ia/: main.c
src/server/: add_to_inventory.c  check_waiting_cmds.c  client.c  command.c  command_b.c  command_broadcast.c  command_client.c  command_connect_nbr.c  command_incantation.c  command_inventory.c  command_look.c  command_map.c  command_mct.c  command_move_player.c  command_pin.c  command_player.c  command_put_object.c  command_sgt.c  command_take_object.c  command_team.c  communication.c  connection_client.c  execute_command.c  handle_io.c  handle_parsing.c  inventory_cmds_a.c  inventory_cmds_b.c  look.c  look_function.c  look_utils.c  main.c  map.c  move_player.c  player.c  player_b.c  print_vision_a.c  print_vision_b.c  print_vision_c.c  server.c  socket.c  (+8 more)
src/server/lib/: list.c  send.c  string.c
(+2 files in other folders)
